--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.data.mongodb.host = localhost
 spring.data.mongodb.port = 27017
 spring.data.mongodb.database = stories
 server.port=9090
+
+spring.datasource.url=jdbc:postgresql://localhost:5434/words
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
