adding docker configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,7 @@ services:
     container_name: app
     depends_on:
       - PostgreSQL
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5434/words
-      - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=password
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - mongodb
 
   PostgreSQL:
     image: postgres
@@ -24,12 +20,9 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=postgres
       - POSTGRES_DB=words
+
   mongodb:
     image: mongo:latest
     ports:
       - "27017:27017"
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-    volumes:
-      - mongo-data:/data/db
+    hostname: mongo
