updating docker features

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,47 @@ version: '3.1'
 
 services:
   app:
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgresql:5434/words
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=password
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - SPRING_DATA_MONGODB_HOST = mongodb
+      - SPRING_DATA_MONGODB_PORT = 27017
+      - SPRING_DATA_MONGODB_DATABASE = stories
     image: 'nosql'
     ports:
       - "9090:9090"
     build:
       context: .
     container_name: app
+    networks:
+      - network_all
+    links:
+      - "postgresql:database"
     depends_on:
-      - PostgreSQL
+      - postgresql
       - mongodb
 
-  PostgreSQL:
+  postgresql:
     image: postgres
+    container_name: postgresql
+    hostname: postgresql
+    networks:
+      - network_all
     ports:
       - "5434:5434"
     environment:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=postgres
       - POSTGRES_DB=words
-
   mongodb:
     image: mongo:latest
+    container_name: mongodb
+    hostname: mongodb
+    networks:
+      - network_all
     ports:
       - "27017:27017"
-    hostname: mongo
+networks:
+  network_all: { }
