--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.data.mongodb.host = localhost
-spring.data.mongodb.port = 27017
-spring.data.mongodb.database = stories
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.database =stories
+docker.spring.data.mongodb.uri= mongodb://mongodb:27017/stories
 server.port=9090
-
-spring.datasource.url=jdbc:postgresql://localhost:5434/words
+#for docker cofiguration
+spring.datasource.url=jdbc:postgresql://postgresql:5432/words
+#spring.datasource.url=jdbc:postgresql://localhost:5432/words
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=""
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.driverClassName=org.postgresql.Driver
