--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,6 @@ services:
       - POSTGRES_PASSWORD=""
       - POSTGRES_USER=postgres
       - POSTGRES_DB=words
-
   mongodb:
     image: mongo:latest
     container_name: mongodb
@@ -44,5 +43,13 @@ services:
       - network_all
     ports:
       - "27017:27017"
+    volumes:
+      - ./scripts/mongo/init/:/docker-entrypoint-initdb.d
+      - ./scripts/mongo/init:/home/mongodb
+      - ./scripts/mongo/seed/:/home/mongodb/seed
+      - mean_urls_data:/data/db
+volumes:
+  mean_urls_data:
+
 networks:
   network_all: { }
